// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a default button 1`] = `
<button
  className=
      ms-Button
      {
        --button-background: #ffffff;
        --button-borderColor: #8a8886;
        --button-borderRadius: 2px;
        --button-borderWidth: 1px;
        --button-boxShadow: none;
        --button-contentColor: #323130;
        --button-contentGap: 8px;
        --button-disabled-background: #f3f2f1;
        --button-disabled-borderColor: #f3f2f1;
        --button-disabled-contentColor: #a19f9d;
        --button-focusColor: #000000;
        --button-focusInnerColor: #ffffff;
        --button-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --button-fontSize: 14px;
        --button-fontWeight: 600;
        --button-highContrast-borderColor: WindowText;
        --button-highContrast-contentColor: WindowText;
        --button-highContrast-disabled-background: Window;
        --button-highContrast-disabled-borderColor: GrayText;
        --button-highContrast-disabled-contentColor: GrayText;
        --button-highContrast-disabled-iconColor: GrayText;
        --button-highContrast-hovered-borderColor: Highlight;
        --button-highContrast-hovered-contentColor: Highlight;
        --button-highContrast-hovered-iconColor: Highlight;
        --button-highContrast-iconColor: WindowText;
        --button-highContrast-pressed-borderColor: Highlight;
        --button-highContrast-pressed-contentColor: WindowText;
        --button-highContrast-pressed-iconColor: WindowText;
        --button-hovered-background: #f3f2f1;
        --button-hovered-contentColor: #201f1e;
        --button-iconColor: inherit;
        --button-iconSize: 16px;
        --button-margin: 0;
        --button-maxWidth: 280px;
        --button-minHeight: var(--button-size-regular);
        --button-minWidth: 96px;
        --button-paddingBottom: 0;
        --button-paddingLeft: 20px;
        --button-paddingRight: 20px;
        --button-paddingTop: 0;
        --button-pressed-background: #edebe9;
        --button-pressed-contentColor: #201f1e;
        --button-size-large: 40px;
        --button-size-larger: 48px;
        --button-size-largest: 64px;
        --button-size-regular: 32px;
        --button-size-small: 24px;
        --button-size-smaller: 24px;
        --button-size-smallest: 24px;
        --button-width: auto;
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background: var(--button-background);
        border-bottom-left-radius: var(--button-borderBottomLeftRadius, var(--button-borderRadius));
        border-bottom-right-radius: var(--button-borderBottomRightRadius, var(--button-borderRadius));
        border-bottom-width: var(--button-borderBottomWidth, var(--button-borderWidth));
        border-color: var(--button-borderColor);
        border-left-width: var(--button-borderLeftWidth, var(--button-borderWidth));
        border-right-width: var(--button-borderRightWidth, var(--button-borderWidth));
        border-style: solid;
        border-top-left-radius: var(--button-borderTopLeftRadius, var(--button-borderRadius));
        border-top-right-radius: var(--button-borderTopRightRadius, var(--button-borderRadius));
        border-top-width: var(--button-borderTopWidth, var(--button-borderWidth));
        box-shadow: var(--button-boxShadow);
        box-sizing: border-box;
        color: var(--button-contentColor);
        cursor: pointer;
        display: inline-flex;
        font-family: var(--button-fontFamily);
        font-size: var(--button-fontSize);
        font-weight: var(--button-fontWeight);
        height: var(--button-height);
        justify-content: center;
        max-width: var(--button-maxWidth);
        min-height: var(--button-minHeight);
        min-width: var(--button-minWidth);
        opacity: var(--button-opacity);
        outline: none;
        padding-bottom: var(--button-paddingBottom);
        padding-left: var(--button-paddingLeft);
        padding-right: var(--button-paddingRight);
        padding-top: var(--button-paddingTop);
        position: relative;
        text-decoration: none;
        transition: var(--button-transition);
        user-select: none;
        vertical-align: middle;
        white-space: var(--button-whiteSpace);
        width: var(--button-width);
      }
      .ms-Fabric--isFocusVisible &:focus::after {
        border-bottom-left-radius: var(--button-borderBottomLeftRadius, var(--button-borderRadius));
        border-bottom-right-radius: var(--button-borderBottomRightRadius, var(--button-borderRadius));
        border-color: var(--button-focusColor, black);
        border-style: solid;
        border-top-left-radius: var(--button-borderTopLeftRadius, var(--button-borderRadius));
        border-top-right-radius: var(--button-borderTopRightRadius, var(--button-borderRadius));
        border-width: var(--button-focusWidth, 2px);
        bottom: -1px;
        box-shadow: 0 0 0 var(--button-focusInnerWidth, 1px) var(--button-focusInnerColor, white) inset;
        content: "";
        left: -1px;
        position: absolute;
        right: -1px;
        top: -1px;
        z-index: 1;
      }
      @media screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus::after {
        border-color: var(--button-highContrast-focusColor);
        box-shadow: 0 0 0 var(--button-focusInnerWidth, 1px) var(--button-highContrast-focusInnerColor) inset;
      }
      & > *:not(:first-child) {
        margin-left: var(--button-contentGap);
      }
      @media screen and (forced-colors: active){& {
        background: var(--button-highContrast-background);
        border-color: var(--button-highContrast-borderColor);
        color: var(--button-highContrast-contentColor);
        forced-color-adjust: var(--button-forcedColorAdjust);
        opacity: var(--button-highContrast-opacity);
      }
      @media screen and (forced-colors: active){& .ms-Button-icon {
        color: var(--button-highContrast-iconColor);
      }
      &:hover {
        background: var(--button-hovered-background, var(--button-background));
        border-color: var(--button-hovered-borderColor, var(--button-borderColor));
        box-shadow: var(--button-hovered-boxShadow, var(--button-boxShadow));
        color: var(--button-hovered-contentColor, var(--button-contentColor));
      }
      &:hover .ms-Button-icon {
        color: var(--button-hovered-iconColor, var(--button-iconColor));
      }
      @media screen and (forced-colors: active){&:hover {
        background: var(--button-highContrast-hovered-background, var(--button-highContrast-background));
        border-color: var(--button-highContrast-hovered-borderColor, var(--button-highContrast-borderColor));
        color: var(--button-highContrast-hovered-contentColor, var(--button-highContrast-contentColor));
      }
      @media screen and (forced-colors: active){&:hover .ms-Button-icon {
        color: var(--button-highContrast-hovered-iconColor, --button-highContrast-iconColor);
      }
      &:active {
        background: var(--button-pressed-background, var(--button-hovered-background));
        border-color: var(--button-pressed-borderColor, var(--button-hovered-borderColor, var(--button-borderColor)));
        box-shadow: var(--button-pressed-boxShadow, var(--button-hovered-boxShadow, var(--button-boxShadow)));
        color: var(--button-pressed-contentColor, var(--button-hovered-contentColor, var(--button-contentColor)));
        transform: var(--button-pressed-transform);
        transition: var(--button-pressed-transition);
      }
      &:active .ms-Button-icon {
        color: var(--button-pressed-iconColor, var(--button-iconColor));
      }
      @media screen and (forced-colors: active){&:active {
        background: var(--button-highContrast-pressed-background, var(--button-highContrast-hovered-background, var(--button-highContrast-background)));
        border-color: var(--button-highContrast-pressed-borderColor, var(--button-highContrast-hovered-borderColor, var(--button-highContrast-borderColor)));
        color: var(--button-highContrast-pressed-contentColor, var(--button-highContrast-hovered-contentColor, var(--button-highContarst-contentColor)));
      }
      @media screen and (forced-colors: active){&:active .ms-Button-icon {
        color: var(--button-highContrast-pressed-iconColor, var(--button-highContrast-hovered-iconColor, var(--button-highContrast-iconColor)));
      }
      &[aria-disabled=true] {
        background-color: var(--button-disabled-background);
        border-color: var(--button-disabled-borderColor);
        box-shadow: var(--button-disabled-boxShadow);
        color: var(--button-disabled-contentColor);
        opacity: var(--button-disabled-opacity);
      }
      &[aria-disabled=true] .ms-Button-icon {
        color: var(--button-disabled-iconColor);
      }
      @media screen and (forced-colors: active){&[aria-disabled=true] {
        background: var(--button-highContrast-disabled-background, var(--button-highContrast-background));
        border-color: var(--button-highContrast-disabled-borderColor, var(--button-highContrast-borderColor));
        color: var(--button-highContrast-disabled-contentColor, var(--button-highContrast-contentColor));
        opacity: var(--button-highContrast-disabled-opacity, var(--button-highContrast-opacity));
      }
      @media screen and (forced-colors: active){&[aria-disabled=true] .ms-Button-icon {
        color: var(--button-highContrast-disabled-iconColor, --button-highContrast-iconColor);
      }
  onClick={[Function]}
  onKeyDown={[Function]}
>
  <span
    className=

        {
          line-height: 1;
        }
  >
    This is a button
  </span>
</button>
`;

exports[`Button renders as an anchor when href is provided 1`] = `
<a
  className=
      ms-Button
      {
        --button-background: #ffffff;
        --button-borderColor: #8a8886;
        --button-borderRadius: 2px;
        --button-borderWidth: 1px;
        --button-boxShadow: none;
        --button-contentColor: #323130;
        --button-contentGap: 8px;
        --button-disabled-background: #f3f2f1;
        --button-disabled-borderColor: #f3f2f1;
        --button-disabled-contentColor: #a19f9d;
        --button-focusColor: #000000;
        --button-focusInnerColor: #ffffff;
        --button-fontFamily: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        --button-fontSize: 14px;
        --button-fontWeight: 600;
        --button-highContrast-borderColor: WindowText;
        --button-highContrast-contentColor: WindowText;
        --button-highContrast-disabled-background: Window;
        --button-highContrast-disabled-borderColor: GrayText;
        --button-highContrast-disabled-contentColor: GrayText;
        --button-highContrast-disabled-iconColor: GrayText;
        --button-highContrast-hovered-borderColor: Highlight;
        --button-highContrast-hovered-contentColor: Highlight;
        --button-highContrast-hovered-iconColor: Highlight;
        --button-highContrast-iconColor: WindowText;
        --button-highContrast-pressed-borderColor: Highlight;
        --button-highContrast-pressed-contentColor: WindowText;
        --button-highContrast-pressed-iconColor: WindowText;
        --button-hovered-background: #f3f2f1;
        --button-hovered-contentColor: #201f1e;
        --button-iconColor: inherit;
        --button-iconSize: 16px;
        --button-margin: 0;
        --button-maxWidth: 280px;
        --button-minHeight: var(--button-size-regular);
        --button-minWidth: 96px;
        --button-paddingBottom: 0;
        --button-paddingLeft: 20px;
        --button-paddingRight: 20px;
        --button-paddingTop: 0;
        --button-pressed-background: #edebe9;
        --button-pressed-contentColor: #201f1e;
        --button-size-large: 40px;
        --button-size-larger: 48px;
        --button-size-largest: 64px;
        --button-size-regular: 32px;
        --button-size-small: 24px;
        --button-size-smaller: 24px;
        --button-size-smallest: 24px;
        --button-width: auto;
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        align-items: center;
        background: var(--button-background);
        border-bottom-left-radius: var(--button-borderBottomLeftRadius, var(--button-borderRadius));
        border-bottom-right-radius: var(--button-borderBottomRightRadius, var(--button-borderRadius));
        border-bottom-width: var(--button-borderBottomWidth, var(--button-borderWidth));
        border-color: var(--button-borderColor);
        border-left-width: var(--button-borderLeftWidth, var(--button-borderWidth));
        border-right-width: var(--button-borderRightWidth, var(--button-borderWidth));
        border-style: solid;
        border-top-left-radius: var(--button-borderTopLeftRadius, var(--button-borderRadius));
        border-top-right-radius: var(--button-borderTopRightRadius, var(--button-borderRadius));
        border-top-width: var(--button-borderTopWidth, var(--button-borderWidth));
        box-shadow: var(--button-boxShadow);
        box-sizing: border-box;
        color: var(--button-contentColor);
        cursor: pointer;
        display: inline-flex;
        font-family: var(--button-fontFamily);
        font-size: var(--button-fontSize);
        font-weight: var(--button-fontWeight);
        height: var(--button-height);
        justify-content: center;
        max-width: var(--button-maxWidth);
        min-height: var(--button-minHeight);
        min-width: var(--button-minWidth);
        opacity: var(--button-opacity);
        outline: none;
        padding-bottom: var(--button-paddingBottom);
        padding-left: var(--button-paddingLeft);
        padding-right: var(--button-paddingRight);
        padding-top: var(--button-paddingTop);
        position: relative;
        text-decoration: none;
        transition: var(--button-transition);
        user-select: none;
        vertical-align: middle;
        white-space: var(--button-whiteSpace);
        width: var(--button-width);
      }
      .ms-Fabric--isFocusVisible &:focus::after {
        border-bottom-left-radius: var(--button-borderBottomLeftRadius, var(--button-borderRadius));
        border-bottom-right-radius: var(--button-borderBottomRightRadius, var(--button-borderRadius));
        border-color: var(--button-focusColor, black);
        border-style: solid;
        border-top-left-radius: var(--button-borderTopLeftRadius, var(--button-borderRadius));
        border-top-right-radius: var(--button-borderTopRightRadius, var(--button-borderRadius));
        border-width: var(--button-focusWidth, 2px);
        bottom: -1px;
        box-shadow: 0 0 0 var(--button-focusInnerWidth, 1px) var(--button-focusInnerColor, white) inset;
        content: "";
        left: -1px;
        position: absolute;
        right: -1px;
        top: -1px;
        z-index: 1;
      }
      @media screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus::after {
        border-color: var(--button-highContrast-focusColor);
        box-shadow: 0 0 0 var(--button-focusInnerWidth, 1px) var(--button-highContrast-focusInnerColor) inset;
      }
      & > *:not(:first-child) {
        margin-left: var(--button-contentGap);
      }
      @media screen and (forced-colors: active){& {
        background: var(--button-highContrast-background);
        border-color: var(--button-highContrast-borderColor);
        color: var(--button-highContrast-contentColor);
        forced-color-adjust: var(--button-forcedColorAdjust);
        opacity: var(--button-highContrast-opacity);
      }
      @media screen and (forced-colors: active){& .ms-Button-icon {
        color: var(--button-highContrast-iconColor);
      }
      &:hover {
        background: var(--button-hovered-background, var(--button-background));
        border-color: var(--button-hovered-borderColor, var(--button-borderColor));
        box-shadow: var(--button-hovered-boxShadow, var(--button-boxShadow));
        color: var(--button-hovered-contentColor, var(--button-contentColor));
      }
      &:hover .ms-Button-icon {
        color: var(--button-hovered-iconColor, var(--button-iconColor));
      }
      @media screen and (forced-colors: active){&:hover {
        background: var(--button-highContrast-hovered-background, var(--button-highContrast-background));
        border-color: var(--button-highContrast-hovered-borderColor, var(--button-highContrast-borderColor));
        color: var(--button-highContrast-hovered-contentColor, var(--button-highContrast-contentColor));
      }
      @media screen and (forced-colors: active){&:hover .ms-Button-icon {
        color: var(--button-highContrast-hovered-iconColor, --button-highContrast-iconColor);
      }
      &:active {
        background: var(--button-pressed-background, var(--button-hovered-background));
        border-color: var(--button-pressed-borderColor, var(--button-hovered-borderColor, var(--button-borderColor)));
        box-shadow: var(--button-pressed-boxShadow, var(--button-hovered-boxShadow, var(--button-boxShadow)));
        color: var(--button-pressed-contentColor, var(--button-hovered-contentColor, var(--button-contentColor)));
        transform: var(--button-pressed-transform);
        transition: var(--button-pressed-transition);
      }
      &:active .ms-Button-icon {
        color: var(--button-pressed-iconColor, var(--button-iconColor));
      }
      @media screen and (forced-colors: active){&:active {
        background: var(--button-highContrast-pressed-background, var(--button-highContrast-hovered-background, var(--button-highContrast-background)));
        border-color: var(--button-highContrast-pressed-borderColor, var(--button-highContrast-hovered-borderColor, var(--button-highContrast-borderColor)));
        color: var(--button-highContrast-pressed-contentColor, var(--button-highContrast-hovered-contentColor, var(--button-highContarst-contentColor)));
      }
      @media screen and (forced-colors: active){&:active .ms-Button-icon {
        color: var(--button-highContrast-pressed-iconColor, var(--button-highContrast-hovered-iconColor, var(--button-highContrast-iconColor)));
      }
      &[aria-disabled=true] {
        background-color: var(--button-disabled-background);
        border-color: var(--button-disabled-borderColor);
        box-shadow: var(--button-disabled-boxShadow);
        color: var(--button-disabled-contentColor);
        opacity: var(--button-disabled-opacity);
      }
      &[aria-disabled=true] .ms-Button-icon {
        color: var(--button-disabled-iconColor);
      }
      @media screen and (forced-colors: active){&[aria-disabled=true] {
        background: var(--button-highContrast-disabled-background, var(--button-highContrast-background));
        border-color: var(--button-highContrast-disabled-borderColor, var(--button-highContrast-borderColor));
        color: var(--button-highContrast-disabled-contentColor, var(--button-highContrast-contentColor));
        opacity: var(--button-highContrast-disabled-opacity, var(--button-highContrast-opacity));
      }
      @media screen and (forced-colors: active){&[aria-disabled=true] .ms-Button-icon {
        color: var(--button-highContrast-disabled-iconColor, --button-highContrast-iconColor);
      }
  href="https://www.bing.com"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className=

        {
          line-height: 1;
        }
  >
    This is a button
  </span>
</a>
`;
